--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,15 @@
 version: "3"
+
 services:
-  backend:
+
+  liveview:
     build:
-      context: ./docker/backend
+      context: ./liveview
       dockerfile: Dockerfile
     ports:
       - "4000:4000"
     volumes:
-      - "./docker/backend/housebook:/root/housebook"
+      - "./liveview:/root/liveview"
     command: ["mix", "phx.server"]
     depends_on:
       - database
@@ -27,11 +29,12 @@ services:
 
   gigalixir_client:
     build:
-      context: ./docker/gigalixir_client
+      context: ./gigalixir_client
       dockerfile: Dockerfile
     env_file:
       - env_files/gigalixir_login.env
 
 volumes:
+
   postgresql-data:
     driver: local
