--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 # vscodeのローカル依存な設定ファイルを無視
 *.code-workspace
 
-# .env系は無視(各人が持つログイン情報等記載させるため)
+# env系は無視(各人が持つログイン情報等記載させるため)
 *.env
 
+# ssh_keysは無視
 ssh_keys/*
+
+# log系は無視
+*.log
