--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,11 @@ services:
     depends_on:
       - database
 
+  grpc:
+    build:
+      context: ./grpc
+      dockerfile: Dockerfile
+
   nerves:
     build:
       context: ./nerves
