--- a/grpc/Dockerfile
+++ b/grpc/Dockerfile
@@ -14,8 +14,13 @@ RUN apt update \
   make \
   unzip \
   wget
-  
-RUN wget -O /usr/local/bin/protoc-gen-grpc-web  https://github.com/grpc/grpc-web/releases/download/1.0.6/protoc-gen-grpc-web-1.0.6-linux-x86_64
+
+RUN wget \
+  -O /root/protoc-gen-grpc-web \
+  https://github.com/grpc/grpc-web/releases/download/1.0.6/protoc-gen-grpc-web-1.0.6-linux-x86_64
+RUN wget \
+  -O /root/mix_deps_add.ez \
+  https://github.com/bryanstearns/mix_deps_add/releases/download/0.1.3/mix_deps_add-0.1.3.ez
 
 RUN git clone https://github.com/protocolbuffers/protobuf.git \
  && cd protobuf \
@@ -30,8 +35,8 @@ RUN git clone https://github.com/protocolbuffers/protobuf.git \
 FROM elixir:1.8.2-slim AS runner
 
 COPY --from=builder /usr/local/bin/protoc /usr/local/bin/
-COPY --from=builder /usr/local/bin/protoc-gen-grpc-web /usr/local/bin/
 COPY --from=builder /usr/local/lib/libprotobuf.so.20 /usr/local/lib/
+
 COPY --from=builder /usr/local/lib/libprotoc.so.20 /usr/local/lib/
 COPY --from=builder /usr/lib/x86_64-linux-gnu/libstdc++.so.6 /usr/lib/x86_64-linux-gnu/
 COPY --from=builder /lib/x86_64-linux-gnu/libm.so.6 /lib/x86_64-linux-gnu/
@@ -40,9 +45,15 @@ COPY --from=builder /lib/x86_64-linux-gnu/libpthread.so.0 /lib/x86_64-linux-gnu/
 COPY --from=builder /lib/x86_64-linux-gnu/libc.so.6 /lib/x86_64-linux-gnu/
 COPY --from=builder /lib64/ld-linux-x86-64.so.2 /lib64/
 
-RUN chmod +x /usr/local/bin/protoc-gen-grpc-web 
+COPY --from=builder /root/protoc-gen-grpc-web /usr/local/bin/
+COPY --from=builder /root/mix_deps_add.ez /root/
+
+RUN chmod +x /usr/local/bin/protoc-gen-grpc-web
+
 RUN mix local.hex --force \
- && mix escript.install hex protobuf --force
+ && mix local.rebar --force \
+ && mix escript.install hex protobuf --force \
+ && mix archive.install --force /root/mix_deps_add.ez && rm /root/mix_deps_add.ez
 
 ENV PATH $PATH:/root/.mix/escripts
 ENV LD_LIBRARY_PATH $LD_LIBRARY_PATH:/usr/local/lib
