--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,8 @@ services:
     working_dir: "/root/liveview"
     command: ["mix", "phx.server"]
     depends_on:
-      - database
+      - postgres
+      - mongo
 
   grpc:
     build:
@@ -43,6 +44,13 @@ services:
       - "POSTGRES_PASSWORD=postgres"
       - "POSTGRES_HOST=database"
 
+  mongo:
+    image: mongo:4.1.13-bionic
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongodb-data:/data/db
+
   gigalixir_client:
     build:
       context: ./gigalixir_client
@@ -57,4 +65,7 @@ services:
 volumes:
 
   postgresql-data:
+    driver: local
+
+  mongodb-data:
     driver: local
