--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -31,7 +31,7 @@ services:
     env_file:
       - env_files/nerves.env
 
-  database:
+  postgres:
     image: postgres:11-alpine
     ports:
       - "5432:5432"
