add mongo and mongo-express

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
     command: ["mix", "phx.server"]
     depends_on:
       - postgres
-      - dynamo
+      - mongo
 
   grpc:
     build:
@@ -44,30 +44,22 @@ services:
       - "POSTGRES_PASSWORD=postgres"
       - "POSTGRES_HOST=database"
 
-  dynamo:
-    image: amazon/dynamodb-local:1.11.477
+  mongo:
+    image: mongo:4.1.13-bionic
     ports:
-      - "8000:8000"
+      - "27017:27017"
     volumes:
-      - dynamodb-data:/home/dynamodblocal
-    command: ["-jar", "DynamoDBLocal.jar", "-sharedDb"]
+      - mongodb-data:/data/db
 
-  dynamo-admin:
-    image: node:12-alpine
+  mongo-express:
+    image: mongo-express:0.49.0
     ports:
-      - "8001:8001"
+      - '8081:8081'
     environment:
-      - "DYNAMO_ENDPOINT=http://dynamo:8000"
-    command: ["/bin/sh", "-c", "npm install -g dynamodb-admin && dynamodb-admin"]
+      - "ME_CONFIG_MONGODB_PORT=27017"
+      - "ME_CONFIG_MONGODB_SERVER=mongo"
     depends_on:
-      - dynamo
-
-  aws-cli:
-    image: python:3.7.4-alpine
-    command: ["/bin/sh", "-c", "pip3 install awscli --upgrade && /bin/sh"]
-    depends_on:
-      - dynamo
-      - dynamo-admin
+      - mongo
 
   gigalixir-client:
     build:
@@ -93,5 +85,5 @@ volumes:
   postgresql-data:
     driver: local
 
-  dynamodb-data:
+  mongodb-data:
     driver: local
