--- a/umbrella/Dockerfile
+++ b/umbrella/Dockerfile
@@ -1,10 +1,10 @@
-FROM elixir:1.9.1-alpine
+FROM elixir:1.9.1-alpine as builder
 MAINTAINER YoshimuraMakoto<ymlaedr@gmail.com>
 
 ENV LANG C.UTF-8
 ENV ENTRYKIT_VERSION 0.4.0
 
-WORKDIR /root/umbrella
+WORKDIR /root
 
 RUN apk \
       add \
@@ -29,23 +29,43 @@ RUN apk \
         curl \
         openssl
 
+## EntryKitの取得
+RUN update-ca-certificates \
+ && curl -o entrykit.tgz -L https://github.com/progrium/entrykit/releases/download/v${ENTRYKIT_VERSION}/entrykit_${ENTRYKIT_VERSION}_Linux_x86_64.tgz
+## セットアップ用のパッケージを削除
+#RUN apk del \
+#  .setup-timezone-dependencies \
+#  .setup-entrykit-dependencies \
+# && rm -rf /var/cache/apk/*
+
+
+
+
+FROM elixir:1.9.1-alpine as dev
+MAINTAINER YoshimuraMakoto<ymlaedr@gmail.com>
+
+RUN apk \
+      add \
+      --update \
+      --no-cache \
+      --virtual execute-phoenix-livereload-dependencies \
+        inotify-tools
+
 # phoenixのセットアップ
 RUN mix local.hex --force
 RUN mix local.rebar --force
 RUN mix archive.install hex phx_new --force
 
-## タイムゾーンを変更
-RUN cp /usr/share/zoneinfo/Asia/Tokyo /etc/localtime
+WORKDIR /root
 
-## EntryKitの取得
-RUN update-ca-certificates \
- && curl -L https://github.com/progrium/entrykit/releases/download/v${ENTRYKIT_VERSION}/entrykit_${ENTRYKIT_VERSION}_Linux_x86_64.tgz | tar -xvzf - \
- && mv entrykit /bin/entrykit \
+## タイムゾーンを変更
+COPY --from=builder /usr/share/zoneinfo/Asia/Tokyo /etc/localtime
+
+## entrykitのセットアップ
+COPY --from=builder /root/entrykit.tgz /root
+RUN tar -zxvf entrykit.tgz \
+ && mv entrykit /bin/entrykit \  
  && chmod +x /bin/entrykit \
  && entrykit --symlink
 
-## セットアップ用のパッケージを削除
-RUN apk del \
-  .setup-timezone-dependencies \
-  .setup-entrykit-dependencies \
- && rm -rf /var/cache/apk/*
+
