--- a/vuetify/package.json
+++ b/vuetify/package.json
@@ -12,6 +12,7 @@
     "test": "jest"
   },
   "dependencies": {
+    "@nuxtjs/apollo": "^4.0.0-rc13.1",
     "nuxt": "^2.0.0"
   },
   "devDependencies": {
