--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -51,10 +51,13 @@ services:
       context: ./vuetify
       dockerfile: Dockerfile
     ports:
-      - "3000:3000"
+      - "13000:13000"
     volumes:
       - "./vuetify:/root/vuetify"
     working_dir: "/root/vuetify"
+    environment:
+      - "NUXT_HOST=0.0.0.0"
+      - "NUXT_PORT=13000"
     command: /bin/sh -c "yarn && yarn dev"
 
   postgres:
