--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -118,7 +118,7 @@ services:
     image: "schemaspy/schemaspy:snapshot"
     volumes:
       - "./schemaspy/output:/output"
-    command: ["-host", "postgres:5432", "-t", "pgsql", "-db", "rot_raven_liveview_dev", "-u", "postgres", "-p", "postgres"]
+    command: ["-host", "postgres:5432", "-t", "pgsql", "-db", "rot_raven_dev", "-u", "postgres", "-p", "postgres"]
     depends_on:
       - postgres
 
