--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,8 +18,4 @@ jobs:
       uses: actions/checkout@v1.0.0
     - name: build docker images
       run: |
-        docker-compose build
-    - name: run test
-      run: |
-        docker-compose run --rm umbrella mix ecto.reset
-        docker-compose run --rm umbrella mix test
+        docker -v
