--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,4 +1,4 @@
-name: Elixir CI
+name: MixTest
 
 on:
   pull_request:
@@ -16,6 +16,23 @@ jobs:
     steps:
     - name: Checkout
       uses: actions/checkout@v1.0.0
-    - name: build docker images
+    - name: install docker
       run: |
+        apt update
+        apt install -y curl
+        curl -sSL https://get.docker.com/ | sh
         docker -v
+    - name: install docker-compose
+      run: |
+        apt update
+        apt upgrade -y
+        apt install -y python3 python3-pip
+        pip3 install docker-compose
+        docker-compose -v
+    - name: prepare before test
+      run: |
+        touch env_files/nerves.env
+        touch env_files/gigalixir_login.env
+    - name: run test
+      run: |
+        docker-compose run --rm umbrella mix test
